# HARP

./: .gitignore  README.md  harp-config.toml  notebook.ipynb  pyproject.toml
harp/: __init__.py  _code_sample.py  _utils.py  baseprovider.py  cams.py  cams_models.py  cdsapi_parser.py  cli.py  config.py  era5.py  era5_models.py  harp_nomenclature.csv  merra2.py  merra2parser.py  nomenclature.csv  nomenclature.py  seaice.py  utils.py
harp/_backend/: __init__.py  baseprovider.py  computable.py  harp_query.py  nomenclature.py  timerange.py  timespec.py
harp/_backend/_utils/: ComputeLock.py  HarpErrors.py  __init__.py  harp_query.py
harp/_backend/cds/: __init__.py  auth.py  cds_dataset_provider.py  cds_query.py  cds_search_preprocess.py  cds_search_provider.py  cds_tables.py  cds_tables_meta_infos.py  tables.py
harp/_backend/merra2/: merra2_hourly_dataset_provider.py  merra2_mean_dataset_provider.py  merra2_search_preprocess.py  merra2_search_provider.py
harp/_datastore/: store.py
harp/_search/: __init__.py  ascii_table.py  fuzzy.py  metadatastore.py  results.py  search.py  search_cfg.py  search_engine.py
harp/_search/ressources/: era5.csv
harp/backend/: baseprovider.py  cds.py  computable.py  harp_std.py  nomenclature.py  timespec.py  timespecs.py
harp/backend/cds/: auth.py  cds_dataset_provider.py  tables.py
harp/backend/merra2/: merra2_hourly_dataset_provider.py  merra2_mean_dataset_provider.py
harp/datasets/CAMS/: __init__.py
harp/datasets/CAMS/_hourly/: __init__.py  cams_global_forecast.py  cams_global_forecast_volumetric.py  cams_global_reanalysis.py  cams_global_reanalysis_volumetric.py
harp/datasets/CAMS/_inner/: __init__.py  cams_global_reanalysis.py  cams_global_reanalysis_volumetric.py
harp/datasets/ERA5/: __init__.py
harp/datasets/ERA5/_hourly/: era5_global_reanalysis.py  era5_global_reanalysis_volumetric.py
harp/datasets/ERA5/_hourly/tables/: era5_table3.csv  era5_table5.csv  era5_table6.csv  era5_table7.csv  era5_table8.csv  era5_table9.csv  patch.csv  tables_reference.txt
harp/datasets/ERA5/_inner/: era5_global_reanalysis.py  era5_global_reanalysis_volumetric.py
harp/datasets/ERA5/monthly/: era5_global_reanalysis_monthly_mean.py
harp/datasets/IFS/: AIFS_common.py  ifs.py  ifs_layout.py
harp/datasets/IFS/raster/: AIFS.csv
harp/datasets/IFS/volume/: AIFS.csv
harp/datasets/MERRA2/: __init__.py  hourly.py
harp/datasets/MERRA2/_layout/: merra2_autoparser.py
harp/datastore/: store.py
harp/providers/: __init__.py  baseprovider.py  merra2_parser.py
harp/providers/CAMS/: cams.py  cams_models.py
harp/providers/ECMWF/C3S/: __init__.py
harp/providers/ECMWF/C3S/ERA5/: __init__.py
harp/providers/ECMWF/Copernicus/: __init__.py
harp/providers/ECMWF/Copernicus/CAMS/: __init__.py
harp/providers/ECMWF/IFS/: ifs.py  test.py
harp/providers/ECMWF/IFS/raster/: AIFS.py
harp/providers/ERA5/: era5.csv  era5.py  era5_models.py
harp/providers/IFS/: test.py
harp/providers/MERRA2/: merra2.py  merra2_models.py
harp/providers/NASA/: __init__.py
harp/providers/NASA/MERRA2/: __init__.py  __merra2.py  _merra2.py  daily.py  hourly.py  monthly.py  raw_nomenclature.csv
harp/search/: search.py
harp/utils/: dataset_provider.py  nomenclature.py  std.py
harp/variable/: __init__.py
tests/: GenericDatasetTester.py  raw_merra2_nomenclature.csv  test_CAMS_GlobalForecast.py  test_CAMS_GlobalForecastVolumetric.py  test_CAMS_GlobalReanalysis.py  test_CAMS_GlobalReanalysisVolumetric.py  test_ERA5_GlobalReanalysis.py  test_ERA5_GlobalReanalysisVolumetric.py  test_MERRA2_hourly.py  test_cams.py  test_cdsapi_parser.py  test_era5.py  test_ifs.py  test_merra2.py  test_merra2parser.py  test_nomenclature.py  test_timespecs.py
tests/ancillary/: test_era5.py  test_merra2.py  test_merra2parser.py  test_nomenclature.py  test_seaice.py
tests/ancillary/inputs/: merra2.json
(+177 files in other folders)
