
[project]
name = "harp"
description = "Harmonized Ancillary Resource Provider"
authors = [{name = "Joackim Orcière", email = "joackim.orciere@hygeos.com"}]
requires-python = ">= 3.10"
version = "1.1.0"
dependencies = [
    "numpy",
    "netcdf4",
    "h5netcdf",
    "xarray",
    "h5py",
    "pandas",
    "pydap",
    "cdsapi",
]

[project.optional-dependencies]
git = [
    "core @ git+https://github.com/hygeos/core.git",
]

[project.scripts]
harp = "harp.cli:entry"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
numpy = "*"
scipy = "*"
xarray = "*"
h5py = "*"
pandas = "*"
h5netcdf = "*"
netcdf4 = "*"

[tool.setuptools]
packages = ["harp"]  # Explicitly specify your package

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
harp = { path = ".", editable = true, extras = ["git"] }

[tool.pixi.environments]
default = { features = ["hyp", "sys"], solve-group = "default" }
[tool.pixi.feature.sys.dependencies]
[tool.pixi.feature.hyp.dependencies]

[tool.pixi.tasks]
