
[project]
name = "harp"
description = "Harmonized Ancillary Resource Provider"
authors = [{name = "Joackim Orcière", email = "joackim.orciere@hygeos.com"}]
requires-python = ">= 3.10"
version = "1.1.0"
dependencies = [
    "numpy",
    "netcdf4",
    "h5netcdf",
    "xarray",
    "h5py",
    "core @ git+https://github.com/hygeos/core",
    "pandas",
    # "pydap",
    "pydap==3.5.0",
    "cdsapi>=0.7.5",
    # "scipy",
    # "lxml",
]

[project.scripts]
harp = "harp.cli:entry"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
numpy = "*"
scipy = "*"
xarray = "*"
h5py = "*"
pandas = "*"
h5netcdf = "*"
netcdf4 = "*"
# pydap = "*"
pydap = "==3.5.0"


[tool.setuptools]
packages = {find = {where = ["."], include = ["harp*"]}}

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]

# packages = {find = {}}


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.tasks]
autoparse_merra2 = "python harp/providers/NASA/MERRA2/_layout/merra2_autoparser.py"


[tool.pixi.pypi-dependencies]
harp = { path = ".", editable = true }


[tool.pixi.environments]
default = { features = ['sys', 'sub', 'dev'], solve-group = "default" }

[tool.pixi.feature.sys.dependencies]
[tool.pixi.feature.dev.dependencies]
ipykernel = "<=6.29.5"
[tool.pixi.feature.sub.dependencies]


